Fixed dashboard creation issues Fixed spacing in main stylesheets Fixed protractor angular methods

--- a/app/templates/src/default/_styles/main.less
+++ b/app/templates/src/default/_styles/main.less
@@ -9,8 +9,8 @@
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
-}
-<% if (singlePageApplication) { %>
+}<% if (singlePageApplication) { %>
+
 // Screens and Modules
 @import '../_screens/home/home.less';<% } %><% if (!singlePageApplication) { %>
 
