--- a/app/templates/src/default/_styles/main.sass
+++ b/app/templates/src/default/_styles/main.sass
@@ -8,8 +8,8 @@
 *:after
   -moz-box-sizing: border-box
   -webkit-box-sizing: border-box
-  box-sizing: border-box
-<% if (singlePageApplication) { %>
+  box-sizing: border-box<% if (singlePageApplication) { %>
+
 // Screens and Modules
 @import ../_screens/home/home<% } %><% if (!singlePageApplication) { %>
 
